--- a/Bootstrap4/conFusion/css/style.scss
+++ b/Bootstrap4/conFusion/css/style.scss
@@ -75,3 +75,11 @@ body {
     bottom: 0px;
     z-index: 1;
 }
+
+.modal-header {
+    $background-dark: #512DA8;
+}
+
+.modal-body {
+    $background-pale: #D1C4E9;
+}
