--- a/Bootstrap4/conFusion/css/style.css
+++ b/Bootstrap4/conFusion/css/style.css
@@ -48,11 +48,9 @@ body {
 .carousel {
   background: #512DA8;
 }
-
 .carousel .carousel-item {
   height: 300px;
 }
-
 .carousel .carousel-item img {
   position: absolute;
   top: 0;
@@ -65,4 +63,4 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1;
-}
+}/*# sourceMappingURL=style.css.map */
