--- a/Bootstrap4/conFusion/css/styles.css
+++ b/Bootstrap4/conFusion/css/styles.css
@@ -66,3 +66,11 @@ body {
   bottom: 0px;
   z-index: 1;
 }
+
+.modal-header {
+  background-color: #512DA8;
+}
+
+.modal-body {
+  background-color: #D1C4E9;
+}
